web/style.css
body {
  margin:10pt;
  font-size:10pt;
  font-family:Roboto,sans-serif,"Segoe UI";
}

a {
  color:#007fff;
  text-decoration:none;
  outline:none;
}

.codetable td {
  text-align:center;
  padding-bottom:1em;
  font-family:"Noto Mono",monospace;
}

li {
  padding-top:5pt
}

.staticbox, .textbox {
  box-sizing:border-box;
  width:100%;word-break:break-all;
  border-width:1px;
  border-style:solid;
  border-color:grey;
  padding:10pt;
}

.staticbox {
  background:#f8f8f8;
}

.textbox {
  background:#ffffea;
}

.header {
  text-align:center;
  font-weight:bolder;
  font-size:12pt;
}

.sitefooter {
  display:flex;
  align-items:center;
  border-width:1px 0 0 0;
  border-style:solid;
  position:absolute;
  z-index:5;
  left:0px;
  bottom:0px;
  right:0px;
  font-size: 8pt;
  padding:0.5em 0.7em;
}

.stdbtn, .multibtn {
  cursor:pointer;
  background:linear-gradient(to bottom, #eaeaea 14%,#fcfcfc 52%,#e5e5e5 89%);
  border-width:1px;
  border-style:solid;
  border-color:#a9a9a9;
  border-radius:5pt;
  padding:3pt 10pt;
}

.sitefooter {
  border-color:#c85000;
  background-color:##fffdf2;
}

.important {
  display:flex;
  justify-content:center;
  margin-top:15pt;
  color:#4366bf;
  font-weight:bold;
}

.comment {
  padding:0.5em 1em;
  background-color:#fffdf2;
  box-shadow: 0.2em 0.2em 0.2em #d0d0d0;
  border-width:1px;
  border-style:solid;
  border-color:black;
}

.errorText {
  color:red;
  font-weight:bold;
  text-align:center;
  padding-top:3em;
  display:none;
}

.stdbtn, .multibtn, .staticbox, .textbox {
  box-shadow:3pt 3pt 3pt #d0d0d0;
}

.stdbtn {
  display:inline-block;
  margin-top:15pt;
}

.multibtn {
  margin-top:12pt;
  text-align:center;
}

@media (max-width:768px) {

  .stdbtn, .multibtn, .staticbox, .textbox {
    box-shadow:2pt 2pt 2pt #d0d0d0;
  }

}

